Alignment joy! Removing all padding and margin from .passage children coincidentally created another issue that I previously was not aware of.

--- a/src/scss/partials/_variables.scss
+++ b/src/scss/partials/_variables.scss
@@ -44,21 +44,28 @@ $horizontal-space-small: $horizontal-space / 2 !default;
 $m: $horizontal-space !default;
 
 // Grid gaps
-$grid-row-gap-1: 1rem;
-$grid-row-gap-2: 2rem;
+$grid-row-gap-1: 1rem !default;
+$grid-row-gap-2: 2rem !default;
 
-$grid-column-gap-1: 2rem;
-$grid-column-gap-2: 3rem;
+$grid-column-gap-1: 2rem !default;
+$grid-column-gap-2: 3rem !default;
 
-$grid-gap-1: $grid-row-gap-1 $grid-column-gap-1;
-$grid-gap-2: $grid-row-gap-2 $grid-column-gap-2;
+$grid-gap-1: $grid-row-gap-1 $grid-column-gap-1 !default;
+$grid-gap-2: $grid-row-gap-2 $grid-column-gap-2 !default;
 
 // Grid rows
-$grid-row-1: 11rem;
-$grid-row-2: 24rem;
+$grid-row-base: 24rem !default;
+$grid-row-1: (($grid-row-base - $grid-row-gap-1) / 2) !default;
+$grid-row-2: $grid-row-base !default;
 
 // Gutters
 $grid-gutter: $horizontal-space !default;
+
+//** Images
+//
+// Image sizes
+$main-image-height-1: (($grid-row-1 * 3) + ($grid-row-gap-1 * 2));
+$main-image-height-2: (($grid-row-2 * 2) + ($grid-row-gap-2 ));
 
 //** Screens
 //
