--- a/src/scss/theme-interior/_variables.scss
+++ b/src/scss/theme-interior/_variables.scss
@@ -49,8 +49,4 @@ $grid-bg: transparent !default;
 //
 // Default font units, required for functions amongst other things.
 $font-base: 1rem !default;
-$serif-cap-height: 0.66 !default
-
-//** Spacing
-//
-// Default spacing units
+$serif-cap-height: 0.66 !default;
